--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==4.2.16
 gunicorn==23.0.0
+humanize==4.11.0
 idna==3.10
 isodate==0.7.2
 packaging==24.2
